--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Todo List</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    
+
 
   </body>
 </html>
